versions/v2.11/modules/en/pages/integrations/fleet/overview.adoc
= Overview
:page-languages: [en, zh]
:revdate: 2025-11-04
:page-revdate: {revdate}
:page-community-path: integrations-in-rancher/fleet/overview.adoc 
:page-product-path: integrations/fleet/overview.adoc
ifeval::["{build-type}" != "community"]
:url-continuous-delivery-default-install: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-operators/installation.html#_default_installation
:url-continuous-delivery-configuration-multi-cluster: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-operators/installation.html#_configuration_for_multi_cluster
:url-continuous-delivery-troubleshooting: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/troubleshooting.html
:url-continuous-delivery-gitrepo-add: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-users/gitrepo-add.html
:url-continuous-delivery-gitrepo-targets: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-users/gitrepo-targets.html
:url-continuous-delivery-overview: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/index.html   
:xref-backup-cluster: xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
:xref-fleet-architecture: xref:integrations/fleet/architecture.adoc
:xref-fleet-windows: xref:integrations/fleet/windows-support.adoc
:xref-fleet-proxy: xref:integrations/fleet/use-fleet-behind-a-proxy.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-continuous-delivery-default-install: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-operators/installation#_default_installation
:url-continuous-delivery-configuration-multi-cluster: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-operators/installation#_configuration_for_multi_cluster
:url-continuous-delivery-troubleshooting: https://fleet.rancher.io/{fleet-docs-version}/troubleshooting
:url-continuous-delivery-gitrepo-add: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-users/gitrepo-add
:url-continuous-delivery-gitrepo-targets: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-users/gitrepo-targets
:url-continuous-delivery-overview: https://fleet.rancher.io/{fleet-docs-version}/
:xref-backup-cluster: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher.adoc
:xref-fleet-architecture: xref:integrations-in-rancher/fleet/architecture.adoc
:xref-fleet-windows: xref:integrations-in-rancher/fleet/windows-support.adoc
:xref-fleet-proxy: xref:integrations-in-rancher/fleet/use-fleet-behind-a-proxy.adoc
endif::[]

Continuous Delivery with Fleet is GitOps at scale. Fleet is designed to manage up to a million clusters. It's also lightweight enough that it works great for a {url-continuous-delivery-default-install}[single cluster] too, but it really shines when you get to a {url-continuous-delivery-configuration-multi-cluster}[large scale]. By large scale we mean either a lot of clusters, a lot of deployments, or a lot of teams in a single organization.

Fleet is a separate project from Rancher, and can be installed on any Kubernetes cluster with Helm.

== Architecture

For information about how Fleet works, see the {xref-fleet-architecture}[Architecture] page.

== Accessing {fleet-product-name} in the Rancher UI

Fleet comes preinstalled in Rancher and is managed by the *Continuous Delivery* option in the Rancher UI. For additional information on Continuous Delivery and other Fleet troubleshooting tips, refer {url-continuous-delivery-troubleshooting}[here].

Users can leverage continuous delivery to deploy their applications to the Kubernetes clusters in the git repository without any manual operation by following *gitops* practice.

Follow the steps below to access Continuous Delivery in the Rancher UI:

. Click *☰ > Continuous Delivery*.
. Select your namespace at the top of the menu, noting the following:
 ** By default, *fleet-default* is selected which includes all downstream clusters that are registered through Rancher.
 ** You may switch to *fleet-local*, which only contains the *local* cluster, or you may create your own workspace to which you may assign and move clusters.
 ** You can then manage clusters by clicking on *Clusters* on the left navigation bar.
. Click on *Gitrepos* on the left navigation bar to deploy the gitrepo into your clusters in the current workspace.
. Select your {url-continuous-delivery-gitrepo-add}[git repository] and {url-continuous-delivery-gitrepo-targets}[target clusters/cluster group]. You can also create the cluster group in the UI by clicking on *Cluster Groups* from the left navigation bar.
. Once the gitrepo is deployed, you can monitor the application through the Rancher UI.

== Windows Support

For details on support for clusters with Windows nodes, see the {xref-fleet-windows}[Windows Support] page.

== GitHub Repository

The Fleet Helm charts are available https://github.com/rancher/fleet/releases[here].

== Using {fleet-product-name} Behind a Proxy

For details on using Fleet behind a proxy, see the {xref-fleet-proxy}[Using Fleet Behind a Proxy] page.

== Helm Chart Dependencies

In order for Helm charts with dependencies to deploy successfully, you must run a manual command (as listed below), as it is up to the user to fulfill the dependency list. If you do not do this and proceed to clone your repository and run `helm install`, your installation will fail because the dependencies will be missing.

The Helm chart in the git repository must include its dependencies in the charts subdirectory. You must either manually run `helm dependencies update $chart` or run `helm dependencies build $chart` locally, then commit the complete charts directory to your git repository. Note that you will update your commands with the applicable parameters

== Troubleshooting

* *Known Issue*: clientSecretName and helmSecretName secrets for Fleet gitrepos are not included in the backup nor restore created by the {xref-backup-cluster}#_1_install_the_rancher_backup_operator[backup-restore-operator]. We will update the community once a permanent solution is in place.
* *Temporary Workaround*: By default, user-defined secrets are not backed up in Fleet. It is necessary to recreate secrets if performing a disaster recovery restore or migration of Rancher into a fresh cluster. To modify resourceSet to include extra resources you want to backup, refer to docs https://github.com/rancher/backup-restore-operator#user-flow[here].
* *Debug logging*: To enable debug logging of Fleet components, create a new *fleet* entry in the existing *rancher-config* ConfigMap in the *cattle-system* namespace with the value `{"debug": 1, "debugLevel": 1}`. The Fleet application restarts after you save the ConfigMap.

== Documentation

See the {url-continuous-delivery-overview}[{fleet-product-name} documentation] to learn more.
